2007-09-27  Marek Habersack  <mhabersack@novell.com>

	* man/mod_mono.8.in: document the restart options as Apache 2.0+
	only.

	* src/mod_mono.h: move all apr includes to the APACHE2-only
	section.

	* src/mod_mono.c: disable dashboard (and restart) for Apache 1.3 -
	the support requires apr, which cannot be used in 1.3 modules (as
	far as I know). Module compiles fine with Apache 1.3 now

2007-09-26  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c: added three wrapper functions to get the apache
	configured user id, group id and user name.
	(ensure_dashboard_initialized): attempt to remove the dashboard
	file (if dashboard hasn't been created yet) as root, not as the
	target user.

	* src/mod_mono.h: unixd.h is not found in APACHE 1.3

2007-09-16  Joshua Tauberer  <jit@occams.info>

	* src/mod_mono.c (mono_execute_request): if it can't establish a
	connection after several attempts at forking, emit an error and
	don't continue on assuming the connection is there (causes ENOTCONN).

2007-08-22  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (terminate_xsp2): if apache is shutting down,
	destroy the mutex too, to avoid a leak.

2007-08-10  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (terminate_xsp2): take an extra argument telling
	whether to acquire the dashboard lock before attempting to destroy
	the dashboard.

	* configure.in: typo fixed

2007-08-08  Joshua Tauberer  <jit@occams.info>

	* src/mod_mono.c: some fixes for the cross-process
	locking and refactored process limits.
	- Added a flag in the dashboard to ensure only one child process
	issues an automated restart request to xsp.
	- Don't assume the mutex is actually ever created in case of problems.
	- Don't call apr_global_mutex_child_init if MOD_MONO_LOCKING_MECHANISM
	is set, since for me this causes all locks to block forever.
	- Improved some error messages and added one about command stream
	corruption.