@@ -84,6 +84,7 @@ typedef struct xsp_data {
 	char *max_cpu_time;
 	char *max_memory;
 	char *debug;
+	char *flushOnWrite;
 	char *env_vars;
 	char status; /* One of the FORK_* in the enum above.
 		      * Don't care if run_xsp is "false" */
@@ -710,7 +711,7 @@ create_mono_server_config (apr_pool_t *p, server_rec *s)
 }
 
 static void
-request_send_response_from_memory (request_rec *r, char *byteArray, int size)
+request_send_response_from_memory (request_rec *r, char *byteArray, int size, int doFlush)
 {
 #ifdef APACHE13
 	if (r->sent_bodyct == 0)
@@ -718,12 +719,16 @@ request_send_response_from_memory (request_rec *r, char *byteArray, int size)
 #endif
 
 	ap_rwrite (byteArray, size, r);
+	if (doFlush) {
+		DEBUG_PRINT (0, "flushing");
+		ap_rflush (r);
+	}
 }
 
 static void
 request_send_response_string (request_rec *r, char *byteArray)
 {
-	request_send_response_from_memory (r, byteArray, strlen (byteArray));
+	request_send_response_from_memory (r, byteArray, strlen (byteArray), 0);
 }
 
 /* Not connection because actual port will vary depending on Apache configuration */
@@ -999,7 +1004,7 @@ get_client_block_buffer (request_rec *r, uint32_t requested_size, uint32_t *actu
 }
 
 static int
-do_command (int command, apr_socket_t *sock, request_rec *r, int *result)
+do_command (int command, apr_socket_t *sock, request_rec *r, int *result, int doFlush)
 {
 	int32_t size;
 	char *str;
@@ -1028,7 +1033,7 @@ do_command (int command, apr_socket_t *sock, request_rec *r, int *result)
 				apr_pool_destroy (temp_pool);
 				break;
 			}
-			request_send_response_from_memory (r, str, size);
+			request_send_response_from_memory (r, str, size, doFlush);
 			apr_pool_destroy (temp_pool);
 			break;
 		case GET_SERVER_VARIABLES:
@@ -2023,8 +2028,10 @@ mono_execute_request (request_rec *r, char auto_app)
 	do {
 		input = read_data (sock, (char *) &command, sizeof (int32_t));
 		if (input == sizeof (int32_t)) {
+			int doFlush = conf->flushOnWrite && (strcasecmp (conf->flushOnWrite, "True") == 0);
+			
 			command = INT_FROM_LE (command);
-			result = do_command (command, sock, r, &status);
+			result = do_command (command, sock, r, &status, doFlush);
 		}
 	} while (input == sizeof (int32_t) && result == TRUE);
 
@@ -2696,6 +2703,12 @@ static const command_rec mono_cmds [] = {
 	MAKE_CMD12 (MonoAutoRestartTime, restart_time,
 		    "Time after which the backend should be auto-restarted. The time format is: "
 		    "DD[:HH[:MM[:SS]]]. Default value: 00:12:00:00"),
+	MAKE_CMD12 (MonoFlushOnWrite, flushOnWrite,
+		    "If MonoFlushOnWrite is true, mod_mono will flush the Apache output buffers on "
+		    "every write. Note that Apache2 supports a notion of output filters, which will be "
+		    "invoked on every write if this option is set to true. This may have a severe impact "
+		    "on your application performance. "
+		    "Default: False"),
 	{ NULL }
 };
 
